# unicornafl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  Readme.md  afl-unicorn-common.h  afl-unicorn-cpu-inl.h  afl-unicorn-cpu-translate-inl.h  afl-unicorn-tcg-op-inl.h  afl-unicorn-tcg-runtime-inl.h  afl.c  config.h  config.mk  format.sh  make.sh  pyproject.toml  types.h  uc.c  unicorn2afl.cpp  unicornafl.cpp
.github/workflows/: ci.yaml  py.yaml  py_test.yaml  pypi.yml  rust.yml
bindings/: const_generator.py
bindings/dotnet/UnicornManaged/Const/: Arm.fs  Common.fs
bindings/go/unicorn/: arm_const.go  unicorn.go  unicorn_const.go
bindings/java/: Makefile.build
bindings/java/unicorn/: ArmConst.java  UnicornConst.java
bindings/pascal/unicorn/: ArmConst.pas  UnicornConst.pas
bindings/python/: Makefile  README.TXT  sample_arm.py  sample_arm64.py  sample_arm64eb.py  sample_armeb.py  sample_m68k.py  sample_mips.py  sample_network_auditing.py  sample_sparc.py  sample_x86.py  setup.py  shellcode.py
bindings/python/unicorn2afl/: __init__.py  unicorn2afl.py
bindings/python/unicornafl/: __init__.py  arm_const.py  unicorn.py  unicorn_const.py  unicornafl.py  x86_const.py
bindings/ruby/unicorn_gem/lib/unicorn_engine/: arm_const.rb  unicorn_const.rb
bindings/rust/: Cargo.toml  README.md  build.rs  clippy.sh
bindings/rust/libunicorn-sys/: Cargo.toml  build.rs
bindings/rust/libunicorn-sys/src/: arm64_const.rs  arm_const.rs  lib.rs  m68k_const.rs  mips_const.rs  sparc_const.rs  unicorn_const.rs  x86_const.rs
bindings/rust/src/: afl.rs  arm.rs  arm64.rs  ffi.rs  lib.rs  macros.rs  mips.rs  sparc.rs  ucconst.rs  unicorn_const.rs  utils.rs  x86.rs
bindings/rust/tests/: unicorn.rs  unicornafl.rs
docs/: c-usage.md  fuzzing.md  python-usage.md  rust-usage.md
examples/: sample.py  sample.rs
include/: afl-hash.h  config.h  priv.h  uc_priv.h  unicornafl.h
include/unicorn/: arm.h  unicorn.h
include/unicorn2afl/: unicorn2afl.h
include/unicornafl/: cmplog.h  priv.h  unicornafl.h
msvc/unicorn/unicorn/: unicorn.vcxproj
msvc/unicorn/unicorn_static/: unicorn_static.vcxproj  unicorn_static.vcxproj.filters
python/unicornafl/: __init__.py
qemu/: Makefile.objs  aarch64.h  aarch64eb.h  arm.h  armeb.h  cpu-exec.c  cpus.c  exec.c  header_gen.py  m68k.h  mips.h  mips64.h  mips64el.h  mipsel.h  powerpc.h  sparc.h  sparc64.h  tcg-runtime.c  translate-all.c  unicorn_common.h  x86_64.h
qemu/include/sysemu/: sysemu.h
qemu/target-arm/: translate-a64.c  translate.c  unicorn_arm.c
qemu/target-i386/: translate.c  unicorn.c
qemu/target-m68k/: translate.c
qemu/target-mips/: translate.c
qemu/target-ppc/: translate.c
qemu/target-sparc/: translate.c
qemu/tcg/: tcg-op.h  tcg-runtime.h  tcg.c
samples/: Makefile
src/: bindings.rs  executor.rs  forkserver.rs  harness.rs  hash.rs  lib.rs  target.rs
tests/fuzz/: Makefile  onefile.c
tests/regress/: Makefile  block_test.c  eflags_noset.c  eflags_nosync.c  emu_clear_errors.c  emu_stop_in_hook_overrun.c  mem_64_c.c  mem_exec.c  mem_fuzz.c  mem_protect.c  mem_unmap.c  memleak_arm.c  memleak_arm64.c  memleak_m68k.c  memleak_mips.c  memleak_sparc.c  memleak_x86.c  mips_branch_likely_issue.c  mips_delay_slot_code_hook.c  nr_mem_test.c  rep_movsb.c  ro_mem_test.c  rw_hookstack.c  threaded_emu_start.c
tests/unit/: Makefile  unicorn_test.h
