[package]
name = "unicornafl"
version = "3.0.0"
edition = "2024"
rust-version = "1.87"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl_targets = { version = "0.15.3", features = [
  "pointer_maps",
  "forkserver",
  "cmplog",
  "cmplog_extended_instrumentation",
] }
libafl = "0.15.3"
libafl_bolts = "0.15.3"

serde = { version = "1.0", features = ["derive"] }
unicorn-engine = { git = "https://github.com/unicorn-engine/unicorn", branch = "dev" }
log = "0.4"
nix = { version = "0.29", features = ["signal"] }
env_logger = { version = "0.11", optional = true }
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.12.2", optional = true }

[features]
default = []
bindings = ["unicorn-engine/dynamic_linkage", "pyo3", "pyo3-log", "env_logger"]

[lib]
name = "unicornafl"
crate-type = ["cdylib", "rlib"] # For python

[[example]]
name = "sample"

[profile.release]
lto = true
codegen-units = 1
strip = true
