[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "unicornafl"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "unicorn>=2.1.3"
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
features = ["bindings"]
python-source = "python"