[package]
name = "unicornafl"
version = "1.0.0"
authors = ["Lukas Seidel"]
documentation = ""
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/aflplusplus/unicornafl"
description = "Rust bindings for the Unicorn emulator with AFL++ extensions and utility functions"
build = "build.rs"
links = "unicornafl"

[profile.release]
lto = true
opt-level = 3

[dependencies]
bitflags = "1.0"
libc = "0.2"
capstone="0.6.0"

[build-dependencies]
build-helper = "0.1"
